# knews-mcp

./: .gitignore  LICENSE  README.md  ROADMAP.md  manifest.json  pyproject.toml
.github/workflows/: build-mcpb.yml  publish.yml
src/knews_mcp/: __init__.py  client.py  formatting.py  prompts.py  resources.py  server.py
src/knews_mcp/tools/: __init__.py  arbeitsmarkt.py  blaulicht.py  bundesanzeiger.py  bundestag.py  composite.py  energie.py  epstein.py  foerderung.py  handelsregister.py  insolvenzen.py  jobs.py  luftqualitaet.py  news.py  parteispenden.py  rechtsprechung.py  ted.py  vergabe.py  zwangsversteigerungen.py
